--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - '8.11'
 script:
-  - npm install -g serverless
+  - npm install -g serverless serverless-pyton-requirements
   - sls deploy
 
 branches:
