--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
   - npm install -g serverless
   - npm install serverless-python-requirements
   - pip install pipenv
-  - '[[ $TRAVIS_BRANCH == "master" ]] && sls deploy -v --force --conceal'
+  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then sls deploy -v --force --conceal; fi'
 branches:
   only:
     - master
