--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ script:
   - npm install -g serverless
   - npm install serverless-python-requirements
   - pip install pipenv
-  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then sls deploy -v --force --conceal; fi'
+  - pip install flake8
+  - 'flake8 && if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then sls deploy -v --force --conceal; fi'
 branches:
   only:
     - master
